'#block name changed'

--- a/dynamic_tab_faq.html
+++ b/dynamic_tab_faq.html
@@ -305,7 +305,7 @@ document.getElementById("defaultOpen").click();
 
 	"blocks": [
 	   {
-         "name": "block-tab",
+         "name": "block-tab_sun",
          "type": "heading",
          "settings": [
 
